2007-06-10  Pawel Salek

	Commit Peter's patches for broader testing...
	* libbalsa/imap/imap-handle.c: detect disconnection.
	* libbalsa/imap/imap-commands.c: check for header existence in client
	side sorting.


2007-06-10  Peter Bloomfield

	* src/balsa-index.c: (bndx_expand_to_row): avoid critical
	warnings from GtkTreeView.

2007-06-07  Pawel Salek

	* src/store-address.[ch]: add ability to create addresses from
	VCARD strings.
	* src/balsa-index.c: use new store_address() function names.
	* src/main-window.c: ditto.
	* src/balsa-mime-widget-text.c: add ability to store attached
	 e-mail addresses.
	* libbalsa/address-book-vcard.c: use common VCARD functions.
	* libbalsa/address.[ch]: move common VCARD functions here.

2007-06-05  Peter Bloomfield

	* libbalsa/mime.c: (unwrap_rfc2646): inline check for "-- \n".
	* libbalsa/mailbox.c: (lbm_try_reassemble): do not get message
	just to test flags.
	* libbalsa/send.c: (lbs_process_queue),
	(libbalsa_process_queue): ditto.
	* src/balsa-index.c: (bndx_mailbox_row_inserted_cb): ditto.

2007-06-05  Peter Bloomfield

	* libbalsa/mailbox.[ch]: new convenience methods
	libbalsa_mailbox_msgno_change_flags and
	libbalsa_mailbox_register_msgno.
	* libbalsa/message.[ch]: new convenience method
	libbalsa_message_change_flags.
	* libbalsa/send.c: use libbalsa_message_change_flags.
	* src/balsa-index.[ch]: replace BalsaIndex::current_message with
	BalsaIndex::current_msgno; new members
	BalsaIndex::has_selection_changed_idle and
	BalsaIndex::has_mailbox_changed_idle to avoid setting GObject
	data; new api balsa_index_selected_msgnos_{new,free}.
	* src/balsa-mblist.c: (bmbl_drag_cb): use new
	balsa_index_selected_msgnos_{new,free} api.
	* src/balsa-message.[ch]: use mailbox and msgno instead of
	message.
	* src/main-window.[ch]: ditto; use new
	balsa_index_selected_msgnos_{new,free} api.
	* src/message-window.[ch]: use mailbox and msgno instead of
	        message.
	* src/sendmsg-window.[ch]: ditto.

2007-06-03  Peter Bloomfield